@@ -47,6 +47,7 @@ void Game_window::read_npcs
 	int i;
 					// Create main actor.
 	npcs[0] = main_actor = new Main_actor(nfile, 0, 0);
+	center_view(main_actor->get_abs_tile_coord());
 	if (usecode->get_global_flag(Usecode_machine::did_first_scene))
 		main_actor->clear_flag(Actor::dont_render);
 	else
